--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     var Module = {
       onRuntimeInitialized: function() {
         var test = new Module.Gameboy();
+        test.readRom();
       }
     };
   </script>
